[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt_pabr"
version = "0.1.0"
description = "Real-Time parallel Auditory Brainstem Response (pABR) System using LSL"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "mne",
    "pylsl",
    "pyglet",
    "pywin32",
    "pillow",
    "joblib",
    "h5io",
    "rtmixer",
    "expyfun",
    "sounddevice",
    "cmocean"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rt_pabr*"]